--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "eslint": "^8.56.0",
     "express": "^4.18.2",
     "sequelize": "^6.37.0"
   }
