--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "eslint": "^8.56.0",
     "express": "^4.18.2",
+    "nodemon": "^3.0.3",
+    "pg": "^8.11.3",
     "sequelize": "^6.37.0"
   }
 }
