--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/server.js"
+    "start": "node server/server.js"
   },
   "keywords": [],
   "author": "marcos marinho",
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "mysql2": "^3.9.3",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
     "sequelize": "^6.37.0"
