--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "task",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "main.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js"
+    "start": "node src/main.js",
+    "migrate": "node src/infrastructure/orm/Scheme.js"
   },
   "keywords": [],
   "author": "marcos marinho",
@@ -15,9 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "install": "^0.13.0",
     "mysql2": "^3.9.3",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
-    "sequelize": "^6.37.0"
+    "sequelize": "^6.37.0",
+    "sqlite3": "^5.1.7",
+    "uuid": "^11.1.0"
   }
 }
