--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "start": "node src/main.js",
+    "dev": "node --watch src/main.js",
     "migrate": "node src/infrastructure/orm/Scheme.js"
   },
   "keywords": [],
@@ -14,12 +14,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "install": "^0.13.0",
-    "mysql2": "^3.9.3",
-    "nodemon": "^3.0.3",
-    "pg": "^8.11.3",
     "sequelize": "^6.37.0",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
