--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
-  "type": "module",
   "scripts": {
-    "dev": "node --watch src/main.js",
-    "migrate": "node src/infrastructure/orm/Scheme.js"
+    "dev": "node --watch src/main.mjs",
+    "migrate": "node src/infrastructure/orm/Scheme.js",
+    "build":"node esbuild.config.js",
+    "start": "node dist/bundle.js"
   },
   "keywords": [],
   "author": "marcos marinho",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "esbuild": "^0.25.4",
     "express": "^4.18.2",
     "sequelize": "^6.37.0",
     "sqlite3": "^5.1.7",
